--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+  font-family: "Alice", serif;
+  line-height: 150%;
+  color: #573a37;
+}
+
 body {
   background: url("./assets/bg.jpg");
   background-size: cover;
@@ -15,4 +21,14 @@ body {
 img {
   width: 100%;
   border-radius: 16px;
+}
+
+h1 {
+  line-height: 140%;
+  font-size: 40px;
+}
+
+h1,
+h2 {
+  color: #291b1a;
 }
