--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: "Alice", serif;
   line-height: 150%;
@@ -23,12 +28,32 @@ img {
   border-radius: 16px;
 }
 
+#main {
+  padding: 24px;
+}
+
 h1 {
   line-height: 140%;
   font-size: 40px;
 }
 
-h1,
 h2 {
-  color: #291b1a;
+    line-height: 150%;
+}
+
+p + p {
+    margin-top: 12px;
+}
+
+section + section {
+    margin-top: 24px;
+}
+
+ul {
+    padding-left: 28px;
+}
+
+h1, h2 {
+    color: #291b1a;
+    margin-bottom: 4px;
 }
