--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   background: #f0e8c2;
   border-radius: 24px;
   padding: 24px;
-  margin: 48px auto;
+  margin: 48px auto 28px;
 }
 
 img {
@@ -38,22 +38,35 @@ h1 {
 }
 
 h2 {
-    line-height: 150%;
+  line-height: 150%;
 }
 
 p + p {
-    margin-top: 12px;
+  margin-top: 12px;
 }
 
 section + section {
-    margin-top: 24px;
+  margin-top: 24px;
 }
 
 ul {
-    padding-left: 28px;
+  padding-left: 28px;
 }
 
-h1, h2 {
-    color: #291b1a;
-    margin-bottom: 4px;
+h1,
+h2 {
+  color: #291b1a;
+  margin-bottom: 4px;
+}
+
+footer, footer a {
+    color: #f0e8c2;
+    margin: 28px auto 48px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+footer img {
+    width: 16px;
+    vertical-align: middle;
 }
